fixes to search alignment

--- a/style.css
+++ b/style.css
@@ -49,17 +49,19 @@ li{
 }
 .search{
   display: block;
+}
+input[type="text"]{
   margin-left: auto;
   margin-right: auto;
+  display: block;
   width: 50%;
 }
 .bott-nav{
   display: inline;
-  background-color: #333;
-  overflow: hidden;
-  position;relative;
+  background-color:
   bottom: 0;
   width: 100%;
+  position: absolute;
 }
 #l-bott-nav{
   float: left;
@@ -69,6 +71,31 @@ li{
 }
 #search-box{
   border: medium;
+}
+}
+input[type="submit"]:hover{
+  background-color: #f8f8f8;
+  height: 36px;
+  line-height: 27px;
+  border: 1px solid #c6c6c6;
+  color: #757575;
+  font-weight: bold;
+  padding: 0 16px;
+  margin: 11px 4px;
+  min-width: 54px;
+  text-align: center;
+}
+input[type="submit"]{
+  background-color: #f2f2f2;
+  height: 36px;
+  line-height: 27px;
+  border: 1px solid #f2f2f2;
+  color: #757575;
+  font-weight: bold;
+  padding: 0 16px;
+  margin: 11px 4px;
+  min-width: 54px;
+  text-align: center;
 }
 li{
   display: inline;
@@ -80,10 +107,6 @@ li{
   margin-right: auto;
   display: block;
 }
-#logo{
-
-}
-
 a{
   color: black;
   text-decoration: none;
@@ -98,6 +121,7 @@ a:hover{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  text-align: center;
 }
 body{
   font: arial,sans-serif;
